[gd_scene load_steps=10 format=2]

[ext_resource path="res://Escenas/Nave.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fondo.tscn" type="PackedScene" id=2]
[ext_resource path="res://NIvel_1.gd" type="Script" id=3]
[ext_resource path="res://Escenas/Spawn_Rocas.gd" type="Script" id=4]
[ext_resource path="res://Assets/BubbleBobble.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 134.99 )

[sub_resource type="Animation" id=2]
resource_name = "Movimiento"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -112.246 ), Vector2( 1280, -112.246 ), Vector2( 0, -112.246 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 5 )

[node name="NIvel_1" type="Node2D"]
position = Vector2( -3.56763, -54.7036 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Nave" parent="." instance=ExtResource( 1 )]
position = Vector2( 639.081, 682.808 )

[node name="Pared_1" type="StaticBody2D" parent="."]
position = Vector2( -10.0264, 584.422 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared_1"]
shape = SubResource( 1 )

[node name="Pared_2" type="StaticBody2D" parent="."]
position = Vector2( 1290.3, 584.953 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pared_2"]
shape = SubResource( 1 )

[node name="Fondo" parent="." instance=ExtResource( 2 )]

[node name="Spawn_Rocas" type="Position2D" parent="."]
position = Vector2( 576.11, -112.246 )
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spawn_Rocas"]
autoplay = "Movimiento"
anims/Movimiento = SubResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Contador" type="Label" parent="HUD"]
margin_left = 47.0902
margin_top = 45.4084
margin_right = 226.09
margin_bottom = 112.408
custom_fonts/font = SubResource( 3 )
text = "PUNTOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemigo" type="Sprite" parent="."]
visible = false
position = Vector2( 620.786, 114.839 )
texture = ExtResource( 6 )
